# kk

./: Cargo.toml  Makefile  README.md  \  default-left-associative-example.kk  design-goals.md  hello.kk  lispy.kk  review.sh  right-associative-example.kk  stream.kk  ternary-operator.kk  test.kk  test.sh  todo.md
docs/: intro.md
docs/features/: bang-notation.md  expressions.md  function.md  implicits.md  overloading.md
src/: ast.rs  cli.rs  compile.rs  core_ast.rs  environment.rs  formatter.rs  ibx.rs  inferred_ast.rs  innate_function.rs  interpret.rs  intrinsic.rs  javascript_ast.rs  main.rs  module.rs  non_empty.rs  parse.rs  parse_simple.rs  partially_qualified_ast.rs  pattern.rs  qualified_ast.rs  raw_ast.rs  simple_ast.rs  simple_parse.rs  solved_ast.rs  stringify_error.rs  tail_call_optimisation.rs  temp.txt  tokenize.rs  transpile.rs  transpile_cps.rs  typ.rs  typechecked_ast.rs  unify.rs  utils.rs
src/snapshots/: kk__formatter__formatter_test__comment_surrounding_whitespace_should_be_trimmed.snap  kk__formatter__formatter_test__comments_more_than_two_quotes_should_be_forced_newline.snap  kk__formatter__formatter_test__content_after_multiline_string_should_follow_indentation.snap  kk__formatter__formatter_test__enum_statement__constructors_1.snap  kk__formatter__formatter_test__enum_statement__payload_parenthesized_1.snap  kk__formatter__formatter_test__infix_function_call_1.snap  kk__formatter__formatter_test__operator_1.snap  kk__test_transpile__destructure_record_1.snap  (+126 more)
stdlib/: base.kk  json.kk  list.kk  parse_json.kk
tests/: test_runner.rs
(+951 files in other folders)
