[package]
name = "kk"
version = "0.1.0"
authors = ["Wong Jia Hau <hou32hou@gmail.com>"]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.2"
prettytable-rs = "^0.8"
difference = "2.0.0"
diff = "0.1.12"
peeking_take_while = "0.1.2"
colored = "2"
strip-ansi-escapes = "0.1.0"
codespan-reporting = "0.11.0"
relative-path = "1.3.2"
indexmap = "1.9.1"
itertools = "0.10.0"
crossbeam-channel = "0.5.4"
tokio = { version = "1.17.0", features = ["full"] }
futures = "0.3.21"
rpds = "0.11.0"
pulldown-cmark = "0.9.2"

[dev-dependencies]
insta = "1.5.3"
